# emoji-explainer4c5e293d-fd1d-4a91-8942-3d37058699fd

./: .env.example  README.md  pyproject.toml  schema.prisma
project/: checkApiStatus_service.py  createUser_service.py  deleteFeedback_service.py  deleteUser_service.py  explainEmoji_service.py  fetchEmojiMeaning_service.py  fetchFeedback_service.py  getHistory_service.py  getSupportedEmojis_service.py  getUserDetails_service.py  interpretEmoji_service.py  server.py  submitFeedback_service.py  updateUser_service.py  userLogin_service.py
